feat(device) detect brand Majestic models: Pluto 26, Pluto 26N feat(device) detect brand Starmobile models: Play Club, Play Style feat(device) detect brand Navon model: D405 feat(device) detect brand QMobile models: Energy X2, Energy X1, Black Two, Noir A600 feat(device) detect brand Xiaomi models: Redmi 6 Pro, Redmi 6 feat(device) detect brand Prestigio model: MultiPad 4 Diamond 7.0" 3G (PMP7070C3G) feat(device) detect brand Pixus model: Play Three v3.0 feat(device) detect brand Navon model: Predator 7 feat(device) detect brand Digma model: Plane 8733T 3G (PS8145PG) feat(device) detect brand MicroMax models: Q440, Q440 Plus, Spark 4G Prime (Q452), Q454, Selfie 2 Note (Q4601), Q470, Q353, Q353 Plus
feat(test) add tests: Nokia (TA-1053, TA-1044)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1075,6 +1075,14 @@ MicroMax:
       model: 'Infinity N11'
     - regex: 'N8301'
       model: 'Infinity N12'
+    - regex: 'Q440Plus(?:[);/ ]|$)'
+      model: 'Q440 Plus'
+    - regex: 'Micromax[_ ]Q353P(?:[);/ ]|$)'
+      model: 'Q353 Plus'
+    - regex: 'Q452(?:[);/ ]|$)'
+      model: 'Spark 4G Prime'
+    - regex: 'Q4601(?:[);/ ]|$)'
+      model: 'Selfie 2 Note'
 
     - regex: 'MicroMax(?:[ \-\_])?(X291|X246|X252|X458|X312)'
       model: '$1'
@@ -10257,11 +10265,13 @@ Mpman:
 
 # Majestic
 Majestic:
-  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|TAB (?:647|411) 3G|URANO 77LTE'
+  regex: 'MAJESTIC[ _-]|CRONO ?[0-9]+|(?:TAB (?:647|411) 3G|URANO 77LTE|PLUTO__?26N?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'URANO 77LTE(?:[);/ ]|$)'
       model: 'Urano 77 LTE'
+    - regex: 'PLUTO__?(26N?)(?:[);/ ]|$)'
+      model: 'Pluto $1'
     - regex: 'TAB (647|411) 3G'
       model: 'Tab $1 3G'
       device: 'tablet'
@@ -11368,13 +11378,16 @@ Navon:
       model: 'Pure Micro'
     - regex: 'Navon[_ ]Infinity(?:[);/ ]|$)'
       model: 'Infinity'
+    - regex: 'Navon[_ ](D405)(?:[);/ ]|$)'
+      model: '$1'
+
     - regex: '(?:Navon[_ ])?Platinum[ _]10[ _]3G(_V2)?(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Platinum 10.1" 3G$1'
     - regex: '(?:Navon[_ ])?Orpheus[ _]3G(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Orpheus 3G'
-    - regex: 'Predator (3G|10)(?:[);/ ]|$)'
+    - regex: '(?:Navon_)?Predator[_ ](3G|10|7)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Predator $1'
     - regex: 'Raptor3G8GB(?:[);/ ]|$)'
@@ -12799,12 +12812,12 @@ Pioneer:
 
 # Pixus
 Pixus:
-  regex: 'Pixus|(hiPower|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))(?:[);/ ]|$)'
+  regex: 'Pixus|(hiPower|Ride[_ ][34]G|Play[ _]Three[ _]v(?:[234].0|3.1))(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'Ride[_ ]([34])G'
       model: 'Ride $1G'
-    - regex: 'Play[ _]Three[ _]v([24].0|3.1)'
+    - regex: 'Play[ _]Three[ _]v([234].0|3.1)'
       model: 'Play Three v$1'
     - regex: 'Play Two'
       model: 'Play Two'
@@ -14866,7 +14879,9 @@ Prestigio:
       model: 'Muze C3'
     # explicit tables models
     - regex: 'PMT3277_3G'
-      model: 'MultiPad Ranger 7.0 3G'
+      model: 'MultiPad Ranger 7.0" 3G'
+    - regex: 'PMP7070C3G'
+      model: 'MultiPad 4 Diamond 7.0" 3G'
     - regex: 'PGPS7799CIS08GBPG(?:[);/ ]|$)'
       model: 'Geo Vision Tour 3'
     - regex: 'PGPS7797(?:[);/ ]|$)'
@@ -14973,6 +14988,8 @@ QMobile:
       model: 'Jazz X JS$1'
     - regex: 'Noir X1S'
       model: 'Noir X1S'
+    - regex: 'A600(?:[);/ ]|$)'
+      model: 'Noir A600'
     - regex: 'E2 Noir'
       model: 'E2 Noir'
     - regex: 'Hot Pro 2'
@@ -14991,6 +15008,8 @@ QMobile:
       model: 'Q Infinity $1'
     - regex: '(LT950)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'QMobile ENERGY (X[12])(?:[);/ ]|$)'
+      model: 'Energy $1'
     # general detections
     - regex: 'QTab[ _-]([^;/]+) Build'
       model: '$1 Tab'
@@ -15370,12 +15389,12 @@ Star:
 
 # Starmobile (starmobile.ph)
 Starmobile:
-  regex: '(?:Starmobile (?:Play (?:Neo|Spark|GO|Click))|UP[_ ](?:Sense|Rave|Groove|Prime|Selfie|Xtreme|XL))(?:[);/ ]|$)'
+  regex: '(?:Starmobile (?:Play (?:Neo|Spark|GO|Click))|UP[_ ](?:Sense|Rave|Groove|Prime|Selfie|Xtreme|XL)|PLAY (?:Club|Style))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Starmobile PLAY GO(?:[);/ ]|$)'
       model: 'Play Go'
-    - regex: 'Starmobile Play (Neo|Spark|Click)(?:[);/ ]|$)'
+    - regex: '(?:Starmobile )?Play (Neo|Spark|Click|Club|Style)(?:[);/ ]|$)'
       model: 'Play $1'
     - regex: 'UP[_ ](Sense|Rave|Groove|Prime|Selfie|Xtreme|XL)(?:[);/ ]|$)'
       model: 'UP $1'
@@ -17365,6 +17384,8 @@ Xiaomi:
       model: 'Redmi K30 Ultra'
     - regex: 'Redmi Y1 Lite(?:[);/ ]|$)'
       model: 'Redmi Y1 Lite'
+    - regex: 'Redmi 6 Pro(?:[);/ ]|$)'
+      model: 'Redmi 6 Pro'
 
       # specific tablet models
     - regex: 'MI PAD 4 PLUS(?:[);/ ]|$)'
