--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7806,4 +7806,21 @@
     model: Plane 8733T 3G
   os_family: Android
   browser_family: Unknown
-
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; QUANTUM_1010_Lite Build/GOCLEVER.V01) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 63.0.3239.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: GOCLEVER
+    model: Quantum 1010 Lite
+  os_family: Android
+  browser_family: Chrome
