Adds detection for MTRobot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4234,3 +4234,12 @@
     name: Adsbot
     category: Crawler
     url: https://seostar.co/robot/
+-
+  user_agent: MTRobot/0.2 (Metrics Tools Analytics Crawler; https://metrics-tools.de/robot.html; crawler@metrics-tools.de)
+  bot:
+    name: MTRobot
+    category: Crawler
+    url: https://metrics-tools.de/robot.html
+    producer:
+        name: Metrics Tools
+        url: https://metrics-tools.de/
