Adds detection for serpstatbot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4247,3 +4247,12 @@
   user_agent: My User Agent 1.0
   bot:
     name: Generic Bot
+-
+  user_agent: serpstatbot/1.0 (advanced backlink tracking bot; curl/7.58.0; http://serpstatbot.com/; abuse@serpstatbot.com)
+  bot:
+    name: serpstatbot
+    category: Crawler
+    url: http://serpstatbot.com/
+    producer:
+        name: Netpeak Ltd
+        url: https://netpeak.net/
