Adds detection for colly

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4256,3 +4256,10 @@
     producer:
         name: Netpeak Ltd
         url: https://netpeak.net/
+-
+  user_agent: colly - https://github.com/gocolly/colly/v2
+  bot:
+    name: colly
+    category: Crawler
+    url: https://github.com/gocolly/colly/
+
