--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2473,6 +2473,11 @@
     name: 'Netpeak Ltd'
     url: 'https://netpeak.net/'
 
+- regex: 'colly'
+  name: 'colly'
+  category: 'Crawler'
+  url: 'https://github.com/gocolly/colly/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
