Adds detection for l9tcpid

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4262,4 +4262,10 @@
     name: colly
     category: Crawler
     url: https://github.com/gocolly/colly/
+-
+  user_agent: l9tcpid/v1.0.0
+  bot:
+    name: l9tcpid
+    category: Security Checker
+    url: https://github.com/LeakIX/l9tcpid
 
