Adds detection for MegaIndex

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4268,4 +4268,9 @@
     name: l9tcpid
     category: Security Checker
     url: https://github.com/LeakIX/l9tcpid
-
+-
+  user_agent: Mozilla/5.0 (compatible; MegaIndex.ru/2.0; +http://megaindex.com/crawler)
+  bot:
+    name: MegaIndex
+    category: Crawler
+    url: https://megaindex.com/crawler
