--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2483,6 +2483,11 @@
   category: 'Security Checker'
   url: 'https://github.com/LeakIX/l9tcpid'
 
+- regex: 'MegaIndex.ru/([\d+\.])'
+  name: 'MegaIndex'
+  category: 'Crawler'
+  url: 'https://megaindex.com/crawler'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
