Adds detection for Seekport

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4274,3 +4274,12 @@
     name: MegaIndex
     category: Crawler
     url: https://megaindex.com/crawler
+-
+  user_agent: Mozilla/5.0 (compatible; Seekport Crawler; http://seekport.com/)
+  bot:
+    name: Seekport
+    category: Crawler
+    url: http://www.seekport.com/
+    producer:
+        name: SISTRIX GmbH
+        url: https://www.sistrix.de/
