Adds detection for seolyt

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4283,3 +4283,9 @@
     producer:
         name: SISTRIX GmbH
         url: https://www.sistrix.de/
+-
+  user_agent: Mozilla/5.0 (compatible; seolyt/1.1; +https://seolyt.com)
+  bot:
+    name: seolyt
+    category: Crawler
+    url: https://seolyt.com/
