--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2496,6 +2496,11 @@
     name: 'SISTRIX GmbH'
     url: 'https://www.sistrix.de/'
 
+- regex: 'seolyt/([\d+\.])'
+  name: 'seolyt'
+  category: 'Crawler'
+  url: 'https://seolyt.com/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
