Adds detection for YaK

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4289,3 +4289,12 @@
     name: seolyt
     category: Crawler
     url: https://seolyt.com/
+-
+  user_agent: Mozilla/5.0 (compatible; YaK/1.0; http://linkfluence.com/; bot@linkfluence.com)
+  bot:
+    name: YaK
+    category: Crawler
+    url: https://www.linkfluence.com/
+    producer:
+        name: Linkfluence SAS
+        url: https://www.linkfluence.com/
