feat(device) detect brand Motorola models: One Hyper, One Power, Edge Plus, Edge, One Fusion, One Vision, One Fusion Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11135,10 +11135,22 @@ Motorola:
       model: 'P30 Play'
     - regex: '(?:MOT-|Motorola-)?XT1942-1'
       model: 'P30 Note'
-    - regex: '(?:MOT-|Motorola-)?XT1970-5'
+    - regex: '(?:MOT-|Motorola-)?edge plus'
+      model: 'Edge Plus'
+    - regex: '(?:MOT-|Motorola-)?edge'
+      model: 'Edge'
+    - regex: '(?:MOT-|Motorola-)?(?:XT1970-5|one vision)'
       model: 'One Vision'
+    - regex: '(?:MOT-|Motorola-)?one power'
+      model: 'One Power'
+    - regex: '(?:MOT-|Motorola-)?one hyper'
+      model: 'One Hyper'
     - regex: '(?:MOT-|Motorola-)?one zoom'
       model: 'One Zoom'
+    - regex: '(?:MOT-|Motorola-)?one fusion\+'
+      model: 'One Fusion Plus'
+    - regex: '(?:MOT-|Motorola-)?one fusion'
+      model: 'One Fusion'
     - regex: 'motorola one action'
       model: 'One Action'
     - regex: 'motorola one macro'
