Add producer for WhatCMS

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2310,8 +2310,8 @@
   url: 'https://whatcms.org/'
   category: 'Crawler'
   producer:
-    name: ''
-    url: ''
+    name: 'Nineteen Ten LLC'
+    url: 'https://whatcms.org/'
 
 - regex: 'httpx'
   name: 'httpx'
