Adds detection for KomodiaBot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4298,3 +4298,12 @@
     producer:
         name: Linkfluence SAS
         url: https://www.linkfluence.com/
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; +http://www.komodia.com/newwiki/index.php/URL_server_crawler) KomodiaBot/1.0
+  bot:
+    name: KomodiaBot
+    category: Crawler
+    url: http://www.komodia.com/newwiki/index.php/URL_server_crawler
+    producer:
+        name: Komodia Inc.
+        url: https://www.komodia.com/
