--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9824,3 +9824,19 @@
     model: R7 4G
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: 'Mozilla/5.0 (Linux; Android 11; LE2113 Build/RKQ1.201105.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/319.0.0.39.120;]'
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 319.0.0.39.120
+  device:
+    type: smartphone
+    brand: OnePlus
+    model: "9"
+  os_family: Android
+  browser_family: Unknown
