--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -2282,20 +2282,29 @@
   user_agent: Mozilla/5.0 (compatible; Pinterestbot/1.0; http://www.pinterest.com/bot.html)
   bot:
     name: Pinterest
-    url: http://www.pinterest.com/bot.html
+    url: https://help.pinterest.com/en/business/article/pinterest-crawler
     category: Crawler
     producer:
       name: Pinterest
-      url: http://www.pinterest.com/
+      url: https://www.pinterest.com/
 - 
   user_agent: Pinterest/0.2 (+http://www.pinterest.com/)
   bot:
     name: Pinterest
-    url: http://www.pinterest.com/bot.html
+    url: https://help.pinterest.com/en/business/article/pinterest-crawler
     category: Crawler
     producer:
       name: Pinterest
-      url: http://www.pinterest.com/
+      url: https://www.pinterest.com/
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; Nexus 5X Build/MMB29P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/41.0.2272.96 Mobile Safari/537.36 (compatible; Pinterestbot/1.0;  https://www.pinterest.com/bot.html)
+  bot:
+    name: Pinterest
+    url: https://help.pinterest.com/en/business/article/pinterest-crawler
+    category: Crawler
+    producer:
+      name: Pinterest
+      url: https://www.pinterest.com/
 - 
   user_agent: PocketParser/2.0 (+https://getpocket.com/pocketparser_ua)
   bot:
