--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -1567,10 +1567,10 @@
   bot:
     name: HubPages
     category: Crawler
-    url: http://hubpages.com/help/crawlingpolicy
+    url: https://hubpages.com/help/crawlingpolicy
     producer:
-      name: HubPages
-      url: http://hubpages.com/
+      name: HubPages, Inc.
+      url: https://discover.hubpages.com/
 -
   user_agent: HubSpot Website Grader (web-crawlers@hubspot.com)
   bot:
