--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4316,3 +4316,12 @@
     producer:
       name: Komodia Inc.
       url: https://www.komodia.com/
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.3; WOW64; Trident/7.0; rv:11.0; Catchpoint) like Gecko
+  bot:
+    name: Catchpoint
+    category: Site Monitor
+    url: https://www.catchpoint.com/
+    producer:
+      name: Catchpoint Systems
+      url: https://www.catchpoint.com/
