--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -1827,10 +1827,10 @@
 - regex: 'Catchpoint( bot)?'
   name: 'Catchpoint'
   category: 'Site Monitor'
-  url: ''
+  url: 'https://www.catchpoint.com/'
   producer:
     name: 'Catchpoint Systems'
-    url: 'http://www.catchpoint.com/'
+    url: 'https://www.catchpoint.com/'
 
 - regex: 'bitlybot'
   name: 'BitlyBot'
