--- a/Tests/Parser/fixtures/alias_devices.yml
+++ b/Tests/Parser/fixtures/alias_devices.yml
@@ -165,3 +165,23 @@
 - user_agent: Mozilla/5.0 (Mobile; Windows Phone 8.1; Android 4.0; ARM; Trident/7.0; Touch; rv:11.0; IEMobile/11.0; HISENSE; E260T+) like iPhone OS 7_0_3 Mac OS X AppleWebKit/537 (KHTML, like Gecko) Mobile Safari/537
   alias:
     name: E260T+
+
+- user_agent: Callpod Keeper for Android 1.0 (14.2.1.14/511) Dalvik/2.1.0 (Linux; U; Android 7.0; SAMSUNG-SM-G920A Build/NRD90M)
+  alias:
+    name: SAMSUNG-SM-G920A
+
+- user_agent: AndroidDownloadManager/9 (Linux; U; Android 9; SM-J610FN Build/PPR1.180610.011)
+  alias:
+    name: SM-J610FN
+
+- user_agent: Mozilla/5.0 (Mobile; Windows Phone 8.1; Android 4.0; ARM; Trident/7.0; Touch; rv:11.0; IEMobile/11.0; NOKIA; Lumia 930; Vodafone) like iPhone OS 7_0_3 Mac OS X AppleWebKit/537 (KHTML, like Gecko) Mobile Safari/537
+  alias:
+    name: Lumia 930
+
+- user_agent: Mozilla/5.0 (Linux; Android 7.0; Redmi Note 4 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.136 Mobile Safari/537.36
+  alias:
+    name: Redmi Note 4
+
+- user_agent: Mozilla/5.0 (Linux; Android 5.1; MotoE2(4G-LTE)) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
+  alias:
+    name: MotoE2(4G-LTE)
