--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7824,3 +7824,39 @@
     model: Quantum 1010 Lite
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; LGT02) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 90.0.4430.210
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: LG
+    model: G Pad III 8.0
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-T375S) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Safari/537.36
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 90.0.4430.210
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Samsung
+    model: Galaxy Tab E 8.0"
+  os_family: Android
+  browser_family: Chrome
