--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -89,6 +89,8 @@ HTC:
     # explicit smartphone models
     - regex: '2PZC5(?:[);/ ]|$)'
       model: 'U11'
+    - regex: 'U11 plus(?:[);/ ]|$)'
+      model: 'U11 Plus'
     - regex: 'XV6975(?:[);/ ]|$)'
       model: 'Imagio'
     - regex: 'PG86100(?:[);/ ]|$)'
@@ -9650,6 +9652,8 @@ LG:
       model: 'Zone 4'
     - regex: 'LM-X220PM'
       model: 'Tribute Empire'
+    - regex: 'LGLS675'
+      model: 'Tribute 5'
     - regex: 'VS980|L-01F|LG-F320L'
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
@@ -9672,7 +9676,7 @@ LG:
       model: 'G5'
     - regex: 'LG-H84[05]'
       model: 'G5 SE'
-    - regex: 'VS988|LG-H87(?:0DS|3)'
+    - regex: 'VS988|LG-H87(?:0DS|[23])|LGUS997'
       model: 'G6'
     - regex: 'LM-Q850'
       model: 'G7 Fit'
@@ -9738,7 +9742,7 @@ LG:
       model: 'Stylo 2 V'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
-    - regex: 'LG-LS777(?:[);/ ]|$)'
+    - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
       model: 'Stylo 3'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
@@ -9752,6 +9756,8 @@ LG:
       model: 'Fortune 2'
     - regex: 'LM-X410\.F(?:[);/ ]|$)'
       model: 'Premier Pro'
+    - regex: 'LGL455DL(?:[);/ ]|$)'
+      model: 'Premier Pro Plus'
     - regex: 'LML41[34]DL(?:[);/ ]|$)'
       model: 'Premier Pro LTE'
     - regex: 'LM-X525'
@@ -9966,6 +9972,9 @@ LG:
       device: 'tablet'
     - regex: 'LG-V935'
       model: 'G Pad II 10.1'
+      device: 'tablet'
+    - regex: 'LGT02'
+      model: 'G Pad III 8.0'
       device: 'tablet'
     - regex: 'LG-V521'
       model: 'G Pad X 8.0'
@@ -12062,14 +12071,14 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[1579]|11|3[13]|2[157]|[45]1|45)|32(?:01|31)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|31)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
       model: '1'
     - regex: 'RMX180[59]'
       model: '2'
-    - regex: 'RMX180[17]'
+    - regex: 'RMX180[137]'
       model: '2 Pro'
     - regex: 'RMX(1833|182[15])'
       model: '3'
@@ -12744,7 +12753,7 @@ Pentagram:
 
 # Tcl (tcl.com)
 TCL:
-  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A502DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671H|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
+  regex: 'TCL,|TCL[_ -][a-z0-9]+|(?:TCL[_ -][^;/]+ Build)|(?:TCLGalaG60(?:\(9108A\))?|A50[27]DL|T78[02]H|5199I|7040N|5133A|5159[AJ]|5152D|T770H|T671H|T790Y|T766H_EEA|T766A|T799[BH]|Percee TV)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'TCLGalaG60(?:\(9108A\))?(?:[);/ ]|$)'
@@ -12769,6 +12778,8 @@ TCL:
       model: '$1'
     - regex: 'A502DL(?:[);/ ]|$)'
       model: 'LX'
+    - regex: 'A507DL(?:[);/ ]|$)' # TracFone A507DL
+      model: 'A2'
     - regex: '5159[AJ](?:[);/ ]|$)'
       model: 'L9'
     - regex: 'T770H(?:[);/ ]|$)'
