feat(device) detect new brand Dragon Touch models: Notepad K10, Notepad 102 feat(device) detect brand CHIA models: GT KIDS 7 (GTKIDS7V, GTKIDS7B, GTKIDS7R) feat(device) brand CHIA: rename device GTA7WF => A7 ROJA

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -510,9 +510,9 @@ RIM:
     - regex: 'BlackBerry'
       model: 'BlackBerry'
 
-# CHIA
+# CHIA (www.ghia.com.mx)
 CHIA:
-  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G|GTA7WF|VENUS7)(?:[);/ ]|$)'
+  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G|GTA7WF|GTKIDS7[BVR]|VENUS7)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'SVEGLIO[ _]([QH]1)'
@@ -522,7 +522,10 @@ CHIA:
       model: 'TREO TAB8G'
     - regex: 'GTA7WF'
       device: 'tablet'
-      model: 'GTA7WF'
+      model: 'A7 ROJA'
+    - regex: 'GTKIDS7[BVR]'
+      device: 'tablet'
+      model: 'GT KIDS 7'
     - regex: 'VENUS7'
       device: 'tablet'
       model: 'VENUS 7'
@@ -23203,4 +23206,10 @@ VAVA:
 ivvi:
   regex: 'ivvi[ _](F1S|F2C|V1M-S|V2|i1-S)(?:[);/ ]|$)'
   device: 'smartphone'
+  model: '$1'
+
+# Dragon Touch (dragontouch.com)
+Dragon Touch:
+  regex: '(Notepad[_ ](?:K10|102))(?:[);/ ]|$)'
+  device: 'tablet'
   model: '$1'
