feat(device) detect brand ViewSonic models: ViewBoard IFP7550-3 75" 4K,  ViewBoard IFP9850-3 98" 4K, ViewBoard IFP8650-3 86" 4K, ViewBoard IFP6550-3 65" 4K feat(test) add tests: HTC U11, Samsung Galaxy A20 (SM-A205G), Xiaomi Redmi 6A

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16358,9 +16358,9 @@ Vastking:
     - regex: '(M910A|M783K|M783K-16G|M1072R-3G)(?:[);/ ]|$)'
       model: '$1'
 
-# ViewSonic
+# ViewSonic (viewsonic.com)
 ViewSonic:
-  regex: 'ViewSonic|VSD[0-9]+(?:[);/ ]|$)|ViewPad|ViewPhone'
+  regex: 'ViewSonic|ViewPad|ViewPhone|(?:IFP(?:98|86|[67]5)50-3|VSD[0-9]+)(?:[);/ ]|$)'
   device: 'smart display'
   models:
     - regex: '(?:ViewSonic-)?V500(?:[);/ ]|$)'
@@ -16377,6 +16377,8 @@ ViewSonic:
       device: 'tablet'
     - regex: '(VSD[0-9]+)(?:[);/ ]|$)'
       model: '$1'
+    - regex: 'IFP(98|86|[67]5)50-3'
+      model: 'ViewBoard IFP$150-3 $1" 4K'
 
 # Vitelcom
 Vitelcom:
