feat(device) detect brand Blackview model: BV5500 Pro feat(device) detect brand HTC model: U11 Life feat(device) detect brand MiXzo model: ME1030 4G
feat(test) add tests: Huawei Mate 20 X (EVR-L29)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -91,6 +91,8 @@ HTC:
       model: 'U11'
     - regex: 'U11 plus(?:[);/ ]|$)'
       model: 'U11 Plus'
+    - regex: 'U11 life(?:[);/ ]|$)'
+      model: 'U11 Life'
     - regex: 'XV6975(?:[);/ ]|$)'
       model: 'Imagio'
     - regex: 'PG86100(?:[);/ ]|$)'
@@ -2962,14 +2964,12 @@ Blackview:
       model: '$1 Plus'
     - regex: '(BV6000S)'
       model: '$1'
-    - regex: '(BV9[78]00|BL6000)Pro'
+    - regex: '(BL6000|BV(?:[48]000|5500|9[5678]00|6[38]00))Pro'
       model: '$1 Pro'
     - regex: 'Blackview (A[78]|E7S)'
       model: '$1'
     - regex: 'BV9000Pro-F'
       model: 'BV9000 Pro F'
-    - regex: '(BV([48]000|9[56]00|6[83]00))Pro'
-      model: '$1 Pro'
     - regex: '(BV6[13]00)(?:[);/ ]|$)'
       model: '$1'
       device: 'phablet'
@@ -20739,11 +20739,11 @@ Vsmart:
 
 # MiXzo
 MiXzo:
-  regex: '(?:MiXzo[ _])?(?:ME1023|ME ?1025|ME1030|MX1037|MX1024|MX10[24]1|MX1397)([ _][34]G)?(?:[);/ ]|$)'
+  regex: '(?:MiXzo[ _])?(?:ME ?10(?:2[35]|30)|MX1037|MX1024|MX10[24]1|MX1397)([ _][34]G)?(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: 'MiXzo[_ ]ME(1023|1030)(?:[_ ]3G)(?:[);/ ]|$)'
-      model: 'ME$1 3G'
+    - regex: 'MiXzo[_ ]ME ?(1023|1030)(?:[_ ]([34])G)(?:[);/ ]|$)'
+      model: 'ME$1 $2G'
     - regex: 'MiXzo[_ ]MX1021(?:[_ ]3G)?(?:[);/ ]|$)'
       model: 'MX1021 3G'
     - regex: '(?:MiXzo[ _])?MX(1037|1041|1024|1397)[ _]4G(?:[);/ ]|$)'
