feat(device) detect brand LG models: G Stylo (LGMS631), K4 LTE (LG-K130) feat(device) detect brand Vivo modelz: V17 Pro (1910), Y90 (1823) feat(device) detect brand Tecno Mobile model: DroidPad 7D (P701)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3194,7 +3194,7 @@ Vivo:
       model: 'V15'
     - regex: 'vivo 1818(?:[);/ ]|$)'
       model: 'V15 Pro'
-    - regex: 'vivo 1909(?:[);/ ]|$)'
+    - regex: 'vivo 19(?:10|09)(?:[);/ ]|$)'
       model: 'V17 Pro'
     - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
       model: 'V17 Neo'
@@ -3336,6 +3336,8 @@ Vivo:
       model: 'Y83 Pro'
     - regex: 'V1730EA(?:[);/ ]|$)'
       model: 'Y89'
+    - regex: 'vivo 1823(?:[);/ ]|$)'
+      model: 'Y90'
     - regex: 'vivo 181[17](?:[);/ ]|$)'
       model: 'Y91'
     - regex: 'V1945A(?:[);/ ]|$)'
@@ -9745,6 +9747,8 @@ LG:
       model: 'Stylo 2 V'
     - regex: 'L-41A(?:[);/ ]|$)'
       model: 'Style 3'
+    - regex: 'LG-?(?:MS631)(?:[);/ ]|$)'
+      model: 'G Stylo'
     - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
       model: 'Stylo 3'
     - regex: 'LM-Q710|LML713DL'
@@ -9791,6 +9795,8 @@ LG:
       model: 'X4 (2019)'
     - regex: '(?:LG-X230|VS425)(?:[);/ ]|$)'
       model: 'K4'
+    - regex: 'LG-K130(?:[);/ ]|$)'
+      model: 'K4 LTE'
     - regex: 'LG-M160(?:[);/ ]|$)'
       model: 'K4 (2017)'
     - regex: 'LM-X420'
@@ -15649,6 +15655,9 @@ Tecno Mobile:
       model: 'Camon iSky 3'
     - regex: 'Tecno[ _]7C(?:[);/ ]|$)'
       model: 'DroidPad 7C'
+      device: 'tablet'
+    - regex: 'Tecno[ _]P701(?:[);/ ]|$)'
+      model: 'DroidPad 7D'
       device: 'tablet'
     - regex: 'DP7C Pro-SGA1(?:[);/ ]|$)'
       model: 'DroidPad 7C Pro'
