--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7964,3 +7964,21 @@ user_agent: Mozilla/5.0 (Linux; Android 9; Notepad_K10 Build/PPR1.180610.011; wv
     model: ME1030 4G
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 7.0; TECNO P701 Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.137 Mobile Safari/537.36 OPR/51.0.2254.150679
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Opera Mobile
+    version: 51.0.2254.150679
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Tecno Mobile
+    model: DroidPad 7D
+  os_family: Android
+  browser_family: Opera
