feat(device) detect brand Vodafone models: Smart N9 Lite (VFD 620), Smart E9 (VFD 527) feat(device) detect brand Motorola model: Moto E6 Play feat(device) detect brand Vivo model: U20 (1921) feat(device) detect brand Cloudfone model: Thrill Boost 2 Plus
feat(device) add tests: Samsung Galaxy Note 9 (SM-N960U), Xiaomi Redmi Note 8T,
 Huawei P30 Pro (VOG-L04), Panasonic Eluga I6, Huawei Honor 10 (COL-AL10)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3152,6 +3152,8 @@ Vivo:
       model: 'V20'
     - regex: 'V2040(?:[);/ ]|$)'
       model: 'V20 (2021)'
+    - regex: 'Vivo 1921(?:[);/ ]|$)'
+      model: 'U20'
     - regex: 'vivo 1805(?:[);/ ]|$)'
       model: 'Nex'
     - regex: 'V1923A(?:[);/ ]|$)'
@@ -11103,6 +11105,8 @@ Motorola:
       model: 'Moto E5 Play'
     - regex: 'Moto E5 go(?:[);/ ]|$)'
       model: 'Moto E5 Go'
+    - regex: 'Moto E6 Play(?:[);/ ]|$)'
+      model: 'Moto E6 Play'
     - regex: 'Moto E\(?([67])\)?(?:[);/ ]|$)'
       model: 'Moto E$1'
     - regex: '(?:MOT-|Motorola-)?XT1030'
@@ -16687,6 +16691,8 @@ Vodafone:
       model: 'Smart Turbo 7'
     - regex: 'VFD 51[013]'
       model: 'Smart E8'
+    - regex: 'VFD 527'
+      model: 'Smart E9'
     - regex: 'VFD 600'
       model: 'Smart Prime 7'
     - regex: 'VFD320'
@@ -16695,6 +16701,8 @@ Vodafone:
       model: 'Smart X9'
     - regex: 'VFD 610'
       model: 'Smart N8'
+    - regex: 'VFD 620'
+      model: 'Smart N9 Lite'
     - regex: 'VFD 630'
       model: 'Smart N10'
     - regex: 'Smart ultra 6'
@@ -20715,6 +20723,8 @@ Cloudfone:
   regex: 'CloudFone[ _]|(?:Thrill (?:Boost[ ]?(2|3)?|Snap|Access)|Excite Prime 2 Pro|NBA Edition)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
+    - regex: 'Thrill Boost 2 Plus(?:[);/ ]|$)'
+      model: 'Thrill Boost 2 Plus'
     - regex: 'Thrill Boost (2|3)(?:[);/ ]|$)'
       model: 'Thrill Boost $1'
     - regex: 'Thrill Boost(?:[);/ ]|$)'
