--- a/Tests/fixtures/smartphone-23.yml
+++ b/Tests/fixtures/smartphone-23.yml
@@ -7861,7 +7861,8 @@
     model: Desire 526
   os_family: Android
   browser_family: Chrome
-- user_agent: Mozilla/5.0 (Linux; Android 4.4.2; HTCD620h Build/KOT49H) AppleWebKit/537.36 (KHTML like Gecko) Chrome/42.0.2311.111 Mobile Safari/537.36
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; HTCD620h Build/KOT49H) AppleWebKit/537.36 (KHTML like Gecko) Chrome/42.0.2311.111 Mobile Safari/537.36
   os:
     name: Android
     version: 4.4.2
@@ -8802,7 +8803,8 @@
     model: Flare J3 Plus
   os_family: Android
   browser_family: Chrome
-- user_agent: Mozilla/5.0 (Linux; Android 6.0; Flare_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Mobile Safari/537.36
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Flare_5) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Mobile Safari/537.36
   os:
     name: Android
     version: "6.0"
