--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -7166,7 +7166,7 @@
   device:
     type: tablet
     brand: Prestigio
-    model: MultiPad Ranger 7.0 3G
+    model: MultiPad Ranger 7.0" 3G
   os_family: Android
   browser_family: Chrome
 - 
