--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -6397,7 +6397,8 @@
     model: Duopix F9
   os_family: Android
   browser_family: Chrome
-- user_agent: Mozilla/5.0 (Linux; Android 7.0; E2 Noir) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; E2 Noir) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
   os:
     name: Android
     version: "7.0"
