--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -4010,7 +4010,7 @@
   device:
     type: tablet
     brand: CHIA
-    model: GTA7WF
+    model: A7 ROJA
   os_family: Android
   browser_family: Chrome
 -
@@ -7861,7 +7861,7 @@
   os_family: Android
   browser_family: Chrome
 -
-user_agent: Mozilla/5.0 (Linux; Android 9; Notepad_K10 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Safari/537.36 GSA/11.43.6.23.arm
+  user_agent: Mozilla/5.0 (Linux; Android 9; Notepad_K10 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.141 Safari/537.36 GSA/11.43.6.23.arm
   os:
     name: Android
     version: "9"
