feat(device) detect brand Ok model: 4K (2020) (AFTWI001) feat(device) detect brand Lenovo models: Yoga A12 (YB-Q501F), Yoga Smart Tab (YT-X705X), Z5 (L78011), K5 Note (L38012), Z5 Pro (L78031), Phab2 (PB2-650Y) feat(device) detect brand Toshiba models: 43LF711U20 (AFTKMST12), 43LF421U19 (AFTBAMR311) feat(device) detect brand Onda models: V989 Core 8 feat(device) detect brand OPPO models: A73 5G (CPH2161) feat(device) detect brand Amazon models: Fire TV Stick Lite (Gen 1) (AFTSS), Fire TV Stick (Gen 3) (AFTSSS), Fire HD 7 (2017) (KFAUWI), Xperia Tablet Z (SO-03E)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5743,7 +5743,7 @@ Sony:
       model: 'Xperia X Performance Dual'
 
     # SONY: explicit tablet models
-    - regex: 'SGP(?:311|312|321)(?:[);/ ]|$)|SO-03E'
+    - regex: '(?:SGP(?:311|312|321)|(Sony)?SO-03E)(?:[);/ ]|$)'
       model: 'Xperia Tablet Z'
       device: 'tablet'
     - regex: 'SGP712(?:[);/ ]|$)'
@@ -9432,6 +9432,12 @@ Lenovo:
     - regex: 'IdeaTab[ \-_]?([a-z0-9]+)'
       model: 'IdeaTab $1'
       device: 'tablet'
+    - regex: 'YB-Q501F' # tablet/pc
+      model: 'Yoga A12'
+      device: 'tablet'
+    - regex: 'YT-X705X'
+      model: 'Yoga Smart Tab'
+      device: 'tablet'
     - regex: 'Yoga Tablet([^;/]+) Build'
       model: 'Yoga Tablet$1'
       device: 'tablet'
@@ -9469,7 +9475,7 @@ Lenovo:
       model: 'K5'
     - regex: 'L38011(?:[);/ ]|$)'
       model: 'K5 Play'
-    - regex: 'A7020a4[08](?:[);/ ]|$)'
+    - regex: '(?:A7020a4[08]|L38012)(?:[);/ ]|$)'
       model: 'K5 Note'
     - regex: 'K31-t3(?:[);/ ]|$)'
       model: 'K31'
@@ -9513,11 +9519,15 @@ Lenovo:
       model: 'Vibe S1'
     - regex: 'L78071(?:[);/ ]|$)'
       model: 'Z5s'
+    - regex: 'L78011(?:[);/ ]|$)'
+      model: 'Z5'
+    - regex: 'L78031(?:[);/ ]|$)'
+      model: 'Z5 Pro'
     - regex: 'L58041(?:[);/ ]|$)'
       model: 'S5 Pro'
     - regex: 'L18021(?:[);/ ]|$)'
       model: 'A3'
-    - regex: 'PB2-670M(?:[);/ ]|$)'
+    - regex: 'PB2-6(?:70M|50Y)(?:[);/ ]|$)'
       model: 'Phab 2'
     - regex: '(S90-A|P70-A)(?:[);/ ]|$)'
       model: '$1'
@@ -12002,6 +12012,9 @@ Onda:
     - regex: 'V989 Air Core8'
       model: 'V989 Air Core 8'
       device: 'tablet'
+    - regex: 'ONDA V989'
+      model: 'V989 Core 8'
+      device: 'tablet'
     - regex: 'T2101L2B1C|OBOOK 20 PLUS DUALOS'
       model: 'oBook 20 Plus Dual OS'
       device: 'tablet'
@@ -12260,6 +12273,8 @@ OPPO:
       model: 'A71'
     - regex: '(?:OPPO[ _]?)?(?:PDY[TM]20|CPH2067)(?:[);/ ]|$)'
       model: 'A72'
+    - regex: 'CPH2161(?:[);/ ]|$)'
+      model: 'A73 5G'
     - regex: '(?:OPPO[ _]?)?(?:PDY[TM]10)(?:[);/ ]|$)'
       model: 'A72n 5G'
     - regex: '(?:OPPO[ _]?)?CPH1715(?:[);/ ]|$)'
@@ -15443,9 +15458,72 @@ Starmobile:
     - regex: 'UP[_ ](Sense|Rave|Groove|Prime|Selfie|Xtreme|XL)(?:[);/ ]|$)'
       model: 'UP $1'
 
+
+# Toshiba
+Toshiba:
+  regex: 'Toshiba|TSBNetTV/|portalmmm/[12].0 TS|(?:T-01C|T-0[12]D|IS04|IS11T|AT1S0|AT300SE|AT(?:7-C|10-A|10[PL]E-A|100|200|270|300|330|374|400|470|500a?|503|570|703|830)|AFTKMST12|AFTBAMR311)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    # explicit smartphone models
+    - regex: 'T-01C'
+      model: 'Regza T-01C'
+    - regex: 'T-01D'
+      model: 'Regza T-01D'
+    - regex: 'T-02D'
+      model: 'Regza T-02D'
+    - regex: 'IS04'
+      model: 'Regza IS04'
+    - regex: 'IS11T'
+      model: 'Regza IS11T'
+
+    # explicit tablet models
+    - regex: 'AT7-C'
+      model: 'Excite'
+      device: 'tablet'
+    - regex: 'AT1S0'
+      model: 'Regza AT1S0'
+      device: 'tablet'
+    - regex: 'AT300SE'
+      model: 'Regza AT300SE'
+      device: 'tablet'
+    - regex: 'AT500a'
+      model: 'Regza AT500a'
+      device: 'tablet'
+    - regex: 'AT(100|200|270|300|330|374|400|470|500|503|570|703|830)'
+      model: 'Regza AT$1'
+      device: 'tablet'
+    - regex: 'AT10([PL])E-A'
+      model: 'Excite AT10$1-A'
+      device: 'tablet'
+    - regex: 'AT10-A'
+      model: 'Excite AT10-A'
+      device: 'tablet'
+
+    - regex: 'AFTKMST12'
+      device: 'tv'
+      model: '43LF711U20'
+    - regex: 'AFTBAMR311'
+      device: 'tv'
+      model: '43LF421U19'
+    - regex: 'TSBNetTV/'
+      device: 'tv'
+      model: ''
+    - regex: 'Toshiba[ /_\-]?([a-z0-9_ \-]+) Build'
+      model: '$1'
+    - regex: 'Toshiba[ /_\-]?([a-z0-9_\-]+)'
+      model: '$1'
+    - regex: 'portalmmm/[12].0 (TS[a-z0-9 ]+)'
+      model: '$1'
+
+# Ok
+Ok:
+  regex: 'AFTWI001(?:[);/ ]|$)'
+  device: 'tv'
+  model: '4K (2020)'
+
 # Kindle
 Amazon:
-  regex: 'KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI)(?:[);/ ]|$)|Kindle|Silk/\d+\.\d+|AlexaMediaPlayer|Amazon (?:Tate|Jem)|AFT[ABMNRST]|SD4930UR|AEO(BC|KN)(?:[);/ ]|$)'
+  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(BC|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+'
   device: 'tablet'
   models:
     - regex: 'AFTA'
@@ -15458,7 +15536,13 @@ Amazon:
       model: 'Fire TV (Gen 3)'
       device: 'tv'
     - regex: 'AFTB'
-      model: 'Fire TV'
+      model: 'Fire TV (Gen 1)'
+      device: 'tv'
+    - regex: 'AFTSSS'
+      model: 'Fire TV Stick (Gen 3)'
+      device: 'tv'
+    - regex: 'AFTSS'
+      model: 'Fire TV Stick Lite (Gen 1)'
       device: 'tv'
     - regex: 'AFT[MST]'
       model: 'Fire TV stick'
@@ -15512,7 +15596,6 @@ Amazon:
     - regex: 'SD4930UR'
       model: 'Fire Phone'
       device: 'smartphone'
-
 
     - regex: 'KFOT|Kindle Fire|Silk/\d+\.\d+'
       model: 'Kindle Fire'
@@ -17794,56 +17877,6 @@ ZYQ:
       model: 'Q88'
       device: 'tablet'
 
-
-# Toshiba
-Toshiba:
-  regex: 'Toshiba|TSBNetTV/|portalmmm/[12].0 TS|T-01C|T-0[12]D|IS04|IS11T|AT1S0|AT300SE|AT(7-C|10-A|10[PL]E-A|100|200|270|300|330|374|400|470|500|503|570|703|830)'
-  device: 'smartphone'
-  models:
-    # explicit smartphone models
-    - regex: 'T-01C'
-      model: 'Regza T-01C'
-    - regex: 'T-01D'
-      model: 'Regza T-01D'
-    - regex: 'T-02D'
-      model: 'Regza T-02D'
-    - regex: 'IS04'
-      model: 'Regza IS04'
-    - regex: 'IS11T'
-      model: 'Regza IS11T'
-
-    # explicit tablet models
-    - regex: 'AT7-C'
-      model: 'Excite'
-      device: 'tablet'
-    - regex: 'AT1S0'
-      model: 'Regza AT1S0'
-      device: 'tablet'
-    - regex: 'AT300SE'
-      model: 'Regza AT300SE'
-      device: 'tablet'
-    - regex: 'AT500a'
-      model: 'Regza AT500a'
-      device: 'tablet'
-    - regex: 'AT(100|200|270|300|330|374|400|470|500|503|570|703|830)'
-      model: 'Regza AT$1'
-      device: 'tablet'
-    - regex: 'AT10([PL])E-A'
-      model: 'Excite AT10$1-A'
-      device: 'tablet'
-    - regex: 'AT10-A'
-      model: 'Excite AT10-A'
-      device: 'tablet'
-
-    - regex: 'TSBNetTV/'
-      device: 'tv'
-      model: ''
-    - regex: 'Toshiba[ /_\-]?([a-z0-9_ \-]+) Build'
-      model: '$1'
-    - regex: 'Toshiba[ /_\-]?([a-z0-9_\-]+)'
-      model: '$1'
-    - regex: 'portalmmm/[12].0 (TS[a-z0-9 ]+)'
-      model: '$1'
 
 # Vivax (www.vivax.com)
 Vivax:
