--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -7982,3 +7982,93 @@
     model: DroidPad 7D
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; Lenovo YB-Q501F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.81 Safari/537.36
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 85.0.4183.81
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: Yoga A12
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; Lenovo YT-X705X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.110 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 86.0.4240.110
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Lenovo
+    model: Yoga Smart Tab
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; ONDA V989) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.116 Safari/537.36 EdgA/45.11.2.5116
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: 45.11.2.5116
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Onda
+    model: V989 Core 8
+  os_family: Android
+  browser_family: Internet Explorer
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; KFAUWI Build/LVY48F) AppleWebKit/537.36 (KHTML, like Gecko) Silk/67.6.1 like Chrome/67.0.3396.87 Safari/537.36
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Mobile Silk
+    version: 67.6.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Amazon
+    model: Fire HD 7 (2017)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.1.2; ja-jp; SonySO-03E Build/10.1.E.0.244) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: tablet
+    brand: Sony
+    model: Xperia Tablet Z
+  os_family: Android
+  browser_family: Android Browser
