feat(device) detect brand Kyocera model: DuraForce Pro 2 (E6920) feat(device) detect brand LG model: X Charge (LG-SP320) feat(device) detect brand Prestigio model: Grace P5 (PSP5515DUO), Grace Q5 (PSP5506DUO),  Muze G7 LTE (PSP7550DUO),  Muze F3 (PSP3532DUO)
feat(device) add tests: Samsung Galaxy A5 Duos (SM-A500F), Samsung Galaxy A30s (SM-A307FN),
 Samsung Galaxy A7 (2018) (SM-A750FN), Samsung Galaxy A30 (SM-A305FN), ZTE Blade A5 (2019), Tecno Mobile R6S,
 Samsung Galaxy S10+ (SM-G975U1),

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8807,7 +8807,7 @@ Kyocera:
       model: 'DuraForce'
     - regex: 'E6810'
       model: 'DuraForce Pro'
-    - regex: 'E6910'
+    - regex: '(?:KYOCERA-)?E69[12]0'
       model: 'DuraForce Pro 2'
     - regex: 'E7110'
       model: 'DuraForce Ultra 5G'
@@ -9785,6 +9785,8 @@ LG:
       model: 'X2'
     - regex: 'LG-K580'
       model: 'X Cam'
+    - regex: 'LG-SP320'
+      model: 'X Charge'
     - regex: 'LM-X510WM'
       model: 'X Power 3'
     - regex: 'LM-X(?:41[05]K|410S)'
@@ -14926,18 +14928,30 @@ Prestigio:
     - regex: 'PSP5470DUO'
       device: 'smartphone'
       model: 'Grace X5'
+    - regex: 'PSP5515DUO'
+      device: 'smartphone'
+      model: 'Grace P5'
+    - regex: 'PSP5506DUO'
+      device: 'smartphone'
+      model: 'Grace Q5'
     - regex: 'PSP3552DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze H3'
     - regex: 'PSP3511DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze G3 LTE'
+    - regex: 'PSP7550DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze G7 LTE'
     - regex: 'PSP7510DUO(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C7 LTE'
     - regex: 'Muze C3(?:[);/ ]|$)'
       device: 'smartphone'
       model: 'Muze C3'
+    - regex: 'PSP3532DUO(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Muze F3'
     # explicit tables models
     - regex: 'PMT3277_3G'
       model: 'MultiPad Ranger 7.0" 3G'
