feat(device) detect brand LG model: Spirit (LG-H440n) feat(device) add tests: Motorola Moto G9 Play, LG Risio 2
issue #6616

--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -1527,3 +1527,53 @@
     model: Grace Q5
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; LG-H440n) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 88.0.4324.93
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: LG
+    model: Spirit
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; moto g(9) play Build/QPX30.30-Q3-16-18; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/85.0.4183.120 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/288.1.0.47.123;]
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 288.1.0.47.123
+  device:
+    type: smartphone
+    brand: Motorola
+    model: Moto G9 Play
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; LG-M154 Build/MXB48T; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/85.0.4183.101 Mobile Safari/537.36 GSA/11.26.7.21.arm
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.26.7.21
+  device:
+    type: smartphone
+    brand: LG
+    model: Risio 2
+  os_family: Android
+  browser_family: Unknown
