--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9947,7 +9947,7 @@ LG:
       model: 'Leon'
     - regex: '(?:LG-)?H342|LGMS345'
       model: 'Leon 4G LTE'
-    - regex: '(?:LG-)?H422'
+    - regex: '(?:LG-)?H4(?:40|22)'
       model: 'Spirit'
     - regex: '(?:LG)?C660'
       model: 'Optimus Pro'
