feat(app) detect app Pocket Casts

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -218,6 +218,10 @@
 - regex: 'TwitterAndroid[/]?([\d\.]+)?'
   name: 'Twitter'
   version: '$1'
+# pocketcasts.com
+- regex: '^Pocket Casts'
+  name: 'Pocket Casts'
+  version: ''
 
 - regex: 'TopBuzz/([\d\.]+)'
   name: 'TopBuzz'
