feat(app) detect app DevCasts

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -593,3 +593,15 @@
     type: mobile app
     name: Downcast
     version: 2.8.24.1002
+-
+  user_agent: Pocket Casts
+  client:
+    type: mobile app
+    name: Pocket Casts
+    version: ""
+-
+  user_agent: devcasts/1.0.3.24 CFNetwork/1240.0.4 Darwin/20.5.0
+  client:
+    type: mobile app
+    name: DevCasts
+    version: 1.0.3.24
