--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15272,7 +15272,7 @@ Starmobile:
 
 # Kindle
 Amazon:
-  regex: 'KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI)(?:[);/ ]|$)|Kindle|Silk/\d+\.\d+|AlexaMediaPlayer|Amazon (?:Tate|Jem)|AFT[ABMNRST]|SD4930UR|AEO(BC|KN)(?:[);/ ]|$)'
+  regex: 'KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI)(?:[);/ ]|$)|Kindle|Silk/\d+\.\d+|Echo/1|AlexaMediaPlayer|Amazon (?:Tate|Jem)|AFT[ABMNRST]|SD4930UR|AEO(BC|KN)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'AFTA'
@@ -15346,7 +15346,7 @@ Amazon:
     - regex: 'Kindle'
       model: 'Kindle'
 
-    - regex: 'AEO(BC|KN)(?:[);/ ]|$)'
+    - regex: 'Echo/1|AEO(?:BC|KN)(?:[);/ ]|$)'
       model: 'Echo'
       device: 'smart speaker'
     - regex: 'AlexaMediaPlayer'
