feat(app) detect apps: Gaana, Aha Radio 2, Unibox

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -605,3 +605,21 @@
     type: mobile app
     name: DevCasts
     version: 1.0.3.24
+-
+  user_agent: GaanaAndroid-8.27.3/Dalvik/2.1.0 (Linux; U; Android 9; Redmi Note 8 MIUI/V11.0.6.0.PCOINXM)
+  client:
+    type: mobile app
+    name: Gaana
+    version: 8.27.3
+-
+  user_agent: AhaRadio2/8.12.3 CFNetwork/976 Darwin/18.2.0
+  client:
+    type: mobile app
+    name: Aha Radio 2
+    version: 8.12.3
+-
+  user_agent: Unibox/428 CFNetwork/811.5.4 Darwin/16.6.0 (x86_64)
+  client:
+    type: mobile app
+    name: Unibox
+    version: ""
