--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -218,17 +218,27 @@
 - regex: 'TwitterAndroid[/]?([\d\.]+)?'
   name: 'Twitter'
   version: '$1'
-# pocketcasts.com
+# Pocket Casts (https://pocketcasts.com)
 - regex: '^Pocket Casts'
   name: 'Pocket Casts'
   version: ''
-
+# Gaana (https://gaana.com)
+- regex: '^GaanaAndroid-([\d\.]+)'
+  name: 'Gaana'
+  version: '$1'
 - regex: 'TopBuzz/([\d\.]+)'
   name: 'TopBuzz'
   version: '$1'
 - regex: 'Snapchat/([\d\.]+)'
   name: 'Snapchat'
   version: '$1'
+- regex: 'AhaRadio2/([\d\.]+)'
+  name: 'Aha Radio 2'
+  version: '$1'
+# Unibox (https://apps.apple.com/app/id933879046)
+- regex: 'Unibox/([\d\.]+)'
+  name: 'Unibox'
+  version: ''
 
 # UnityPlayer
 - regex: 'UnityPlayer/([\d\.]+)'
